deployments/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-itog-ingress
  labels:
    app.kubernetes.io/part-of: kube-itog-tsitanya
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 80
          - path: /info
            pathType: Prefix
            backend:
              service:
                name: info-service
                port:
                  number: 80
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: login-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: root-service
                port:
                  number: 80
